add compound proxy

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,6 +3,7 @@ members = [
     "packages/*",
     "contracts/fees_collector",
     "contracts/pair_proxy",
+    "contracts/compound_proxy",
     "contracts/farms/*",
 ]
 
