--- a/contracts/fees_collector/schema/config_response.json
+++ b/contracts/fees_collector/schema/config_response.json
@@ -4,18 +4,15 @@
   "description": "A custom struct that holds contract parameters and is used to retrieve them.",
   "type": "object",
   "required": [
-    "astro_token_contract",
+    "beneficiary",
     "factory_contract",
-    "governance_percent",
     "max_spread",
     "owner",
-    "pre_upgrade_astro_amount",
-    "remainder_reward",
-    "staking_contract"
+    "stablecoin_token_contract"
   ],
   "properties": {
-    "astro_token_contract": {
-      "description": "The ASTRO token contract address",
+    "beneficiary": {
+      "description": "The beneficiary address to received fees in stablecoin",
       "allOf": [
         {
           "$ref": "#/definitions/Addr"
@@ -27,25 +24,6 @@
       "allOf": [
         {
           "$ref": "#/definitions/Addr"
-        }
-      ]
-    },
-    "governance_contract": {
-      "description": "The governance contract address (fee distributor for vxASTRO stakers)",
-      "anyOf": [
-        {
-          "$ref": "#/definitions/Addr"
-        },
-        {
-          "type": "null"
-        }
-      ]
-    },
-    "governance_percent": {
-      "description": "The percentage of fees that go to governance_contract",
-      "allOf": [
-        {
-          "$ref": "#/definitions/Uint64"
         }
       ]
     },
@@ -65,24 +43,8 @@
         }
       ]
     },
-    "pre_upgrade_astro_amount": {
-      "description": "The amount of ASTRO tokens accrued before upgrading the Maker implementation and enabling reward distribution",
-      "allOf": [
-        {
-          "$ref": "#/definitions/Uint128"
-        }
-      ]
-    },
-    "remainder_reward": {
-      "description": "The remainder ASTRO tokens (accrued before the Maker is upgraded) to be distributed to xASTRO stakers",
-      "allOf": [
-        {
-          "$ref": "#/definitions/Uint128"
-        }
-      ]
-    },
-    "staking_contract": {
-      "description": "The xASTRO staking contract address",
+    "stablecoin_token_contract": {
+      "description": "The stablecoin token contract address",
       "allOf": [
         {
           "$ref": "#/definitions/Addr"
@@ -97,14 +59,6 @@
     },
     "Decimal": {
       "description": "A fixed-point decimal value with 18 fractional digits, i.e. Decimal(1_000_000_000_000_000_000) == 1.0\n\nThe greatest possible value that can be represented is 340282366920938463463.374607431768211455 (which is (2^128 - 1) / 10^18)",
-      "type": "string"
-    },
-    "Uint128": {
-      "description": "A thin wrapper around u128 that is using strings for JSON encoding/decoding, such that the full u128 range can be used for clients that convert JSON numbers to floats, like JavaScript and jq.\n\n# Examples\n\nUse `from` to create instances of this and `u128` to get the value out:\n\n``` # use cosmwasm_std::Uint128; let a = Uint128::from(123u128); assert_eq!(a.u128(), 123);\n\nlet b = Uint128::from(42u64); assert_eq!(b.u128(), 42);\n\nlet c = Uint128::from(70u32); assert_eq!(c.u128(), 70); ```",
-      "type": "string"
-    },
-    "Uint64": {
-      "description": "A thin wrapper around u64 that is using strings for JSON encoding/decoding, such that the full u64 range can be used for clients that convert JSON numbers to floats, like JavaScript and jq.\n\n# Examples\n\nUse `from` to create instances of this and `u64` to get the value out:\n\n``` # use cosmwasm_std::Uint64; let a = Uint64::from(42u64); assert_eq!(a.u64(), 42);\n\nlet b = Uint64::from(70u32); assert_eq!(b.u64(), 70); ```",
       "type": "string"
     }
   }
