--- a/contracts/fees_collector/schema/config_response.json
+++ b/contracts/fees_collector/schema/config_response.json
@@ -7,8 +7,8 @@
     "beneficiary",
     "factory_contract",
     "max_spread",
-    "owner",
-    "stablecoin_token_contract"
+    "operator",
+    "stablecoin"
   ],
   "properties": {
     "beneficiary": {
@@ -28,26 +28,26 @@
       ]
     },
     "max_spread": {
-      "description": "The maximum spread used when swapping fee tokens to ASTRO",
+      "description": "The maximum spread used when swapping fee tokens to stablecoin",
       "allOf": [
         {
           "$ref": "#/definitions/Decimal"
         }
       ]
     },
-    "owner": {
-      "description": "Address that is allowed to update contract parameters",
+    "operator": {
+      "description": "Address that's allowed to update bridge assets",
       "allOf": [
         {
           "$ref": "#/definitions/Addr"
         }
       ]
     },
-    "stablecoin_token_contract": {
+    "stablecoin": {
       "description": "The stablecoin token contract address",
       "allOf": [
         {
-          "$ref": "#/definitions/Addr"
+          "$ref": "#/definitions/AssetInfo"
         }
       ]
     }
@@ -56,6 +56,53 @@
     "Addr": {
       "description": "A human readable address.\n\nIn Cosmos, this is typically bech32 encoded. But for multi-chain smart contracts no assumptions should be made other than being UTF-8 encoded and of reasonable length.\n\nThis type represents a validated address. It can be created in the following ways 1. Use `Addr::unchecked(input)` 2. Use `let checked: Addr = deps.api.addr_validate(input)?` 3. Use `let checked: Addr = deps.api.addr_humanize(canonical_addr)?` 4. Deserialize from JSON. This must only be done from JSON that was validated before such as a contract's state. `Addr` must not be used in messages sent by the user because this would result in unvalidated instances.\n\nThis type is immutable. If you really need to mutate it (Really? Are you sure?), create a mutable copy using `let mut mutable = Addr::to_string()` and operate on that `String` instance.",
       "type": "string"
+    },
+    "AssetInfo": {
+      "description": "This enum describes available Token types. ## Examples ``` # use cosmwasm_std::Addr; # use astroport::asset::AssetInfo::{NativeToken, Token}; Token { contract_addr: Addr::unchecked(\"terra...\") }; NativeToken { denom: String::from(\"uluna\") }; ```",
+      "oneOf": [
+        {
+          "description": "Non-native Token",
+          "type": "object",
+          "required": [
+            "token"
+          ],
+          "properties": {
+            "token": {
+              "type": "object",
+              "required": [
+                "contract_addr"
+              ],
+              "properties": {
+                "contract_addr": {
+                  "$ref": "#/definitions/Addr"
+                }
+              }
+            }
+          },
+          "additionalProperties": false
+        },
+        {
+          "description": "Native token",
+          "type": "object",
+          "required": [
+            "native_token"
+          ],
+          "properties": {
+            "native_token": {
+              "type": "object",
+              "required": [
+                "denom"
+              ],
+              "properties": {
+                "denom": {
+                  "type": "string"
+                }
+              }
+            }
+          },
+          "additionalProperties": false
+        }
+      ]
     },
     "Decimal": {
       "description": "A fixed-point decimal value with 18 fractional digits, i.e. Decimal(1_000_000_000_000_000_000) == 1.0\n\nThe greatest possible value that can be represented is 340282366920938463463.374607431768211455 (which is (2^128 - 1) / 10^18)",
