--- a/contracts/generator_proxy/Cargo.toml
+++ b/contracts/generator_proxy/Cargo.toml
@@ -1,9 +1,9 @@
 [package]
-name = "spectrum-astroport-farm"
+name = "spectrum-generator-proxy"
 version = "1.0.0"
 authors = ["Spectrum"]
 edition = "2021"
-description = "Contract to stake LP token and auto collect rewards"
+description = "Proxy contract to Astroport generator"
 
 exclude = [
   # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
@@ -16,31 +16,21 @@ exclude = [
 [lib]
 crate-type = ["cdylib", "rlib"]
 
-[profile.release]
-opt-level = 3
-debug = false
-rpath = false
-lto = true
-debug-assertions = false
-codegen-units = 1
-panic = 'abort'
-incremental = false
-overflow-checks = true
-
 [features]
 # for quicker tests, cargo test --lib
 # for more explicit tests, cargo test --features=backtraces
 backtraces = ["cosmwasm-std/backtraces"]
 
 [dependencies]
-cw20 = "0.13.2"
+astroport = { path = "../../packages/astroport", default-features = false }
+astroport-governance = { path = "../../packages/astroport-governance", default-features = false }
+spectrum = { version = "1.0.0", path = "../../packages/spectrum" }
+cw20 = { version = "0.13.2" }
 cosmwasm-std = "1.0"
-cw-storage-plus = "0.13.2"
-spectrum = { version = "1.0.0", path = "../../../packages/spectrum" }
+cw-storage-plus = {version = "0.13.2"}
 schemars = "0.8.1"
 serde = { version = "1.0.137", default-features = false, features = ["derive"] }
 thiserror = { version = "1.0.31" }
-astroport = { path = "../../../packages/astroport", default-features = false }
 
 [dev-dependencies]
 cosmwasm-schema = "1.0.0"
