--- a/packages/spectrum/Cargo.toml
+++ b/packages/spectrum/Cargo.toml
@@ -3,7 +3,7 @@ name = "spectrum"
 version = "1.0.0"
 authors = ["Spectrum"]
 edition = "2021"
-description = "Common spectrum types"
+description = "Common Spectrum types"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
