--- a/contracts/fees_collector/Cargo.toml
+++ b/contracts/fees_collector/Cargo.toml
@@ -23,13 +23,12 @@ backtraces = ["cosmwasm-std/backtraces"]
 
 [dependencies]
 cosmwasm-std = { version = "1.0" }
-cw20 = { version = "0.13.2" }
-cw-storage-plus = { version = "0.13.2", features = ["iterator"] }
+cw-storage-plus = { version = "0.13.4", features = ["iterator"] }
 schemars = "0.8.1"
-astroport = { path = "../../packages/astroport", default-features = false }
 spectrum = { version = "1.0.0", path = "../../packages/spectrum" }
 serde = { version = "1.0.137", default-features = false, features = ["derive"] }
 thiserror = { version = "1.0.31" }
+kujira = "0.7.21"
 
 [dev-dependencies]
 cosmwasm-schema = { version = "1.0.0" }
