--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,6 +2,8 @@
 members = [
     "packages/*",
     "contracts/router",
+    "contracts/fees_collector",
+    "contracts/compound_proxy"
 ]
 
 [profile.release]
