--- a/contracts/compound_proxy/Cargo.toml
+++ b/contracts/compound_proxy/Cargo.toml
@@ -22,14 +22,13 @@ crate-type = ["cdylib", "rlib"]
 backtraces = ["cosmwasm-std/backtraces"]
 
 [dependencies]
-astroport = { path = "../../packages/astroport", default-features = false }
 spectrum = { version = "1.0.0", path = "../../packages/spectrum" }
-cw20 = { version = "0.13.2" }
 cosmwasm-std = "1.0"
-cw-storage-plus = {version = "0.13.2"}
-schemars = "0.8.1"
+cw-storage-plus = {version = "0.13.4"}
+schemars = "0.8.10"
 serde = { version = "1.0.137", default-features = false, features = ["derive"] }
 thiserror = { version = "1.0.31" }
+kujira = "0.7.21"
 
 [dev-dependencies]
 cosmwasm-schema = "1.0.0"
