--- a/contracts/compound_farm/Cargo.toml
+++ b/contracts/compound_farm/Cargo.toml
@@ -33,14 +33,13 @@ overflow-checks = true
 backtraces = ["cosmwasm-std/backtraces"]
 
 [dependencies]
-cw20 = "0.13.2"
 cosmwasm-std = "1.0"
-cw-storage-plus = "0.13.2"
+cw-storage-plus = "0.13.4"
 spectrum = { version = "1.0.0", path = "../../packages/spectrum" }
-schemars = "0.8.1"
+schemars = "0.8.10"
 serde = { version = "1.0.137", default-features = false, features = ["derive"] }
 thiserror = { version = "1.0.31" }
-astroport = { path = "../../packages/astroport", default-features = false }
+kujira = "0.7.21"
 
 [dev-dependencies]
 cosmwasm-schema = "1.0.0"
