--- a/contracts/compound_proxy/Cargo.toml
+++ b/contracts/compound_proxy/Cargo.toml
@@ -24,14 +24,14 @@ backtraces = ["cosmwasm-std/backtraces"]
 [dependencies]
 astroport = { path = "../../packages/astroport", default-features = false }
 spectrum = { version = "1.0.0", path = "../../packages/spectrum" }
-cw20 = { version = "0.13.2" }
-cosmwasm-std = "1.0"
-cw-storage-plus = {version = "0.13.2"}
+cw20 = { version = "0.15" }
+cosmwasm-std = { version = "1.1" }
+cw-storage-plus = {version = "0.15"}
 schemars = "0.8.1"
 serde = { version = "1.0.137", default-features = false, features = ["derive"] }
 thiserror = { version = "1.0.31" }
+cosmwasm-schema = "1.1"
 
 [dev-dependencies]
-cosmwasm-schema = "1.0.0"
-cw-multi-test = "0.13.2"
+cw-multi-test = {version = "0.15"}
 proptest = "0.10.1"
