--- a/contracts/fees_collector/Cargo.toml
+++ b/contracts/fees_collector/Cargo.toml
@@ -22,15 +22,15 @@ crate-type = ["cdylib", "rlib"]
 backtraces = ["cosmwasm-std/backtraces"]
 
 [dependencies]
-cosmwasm-std = { version = "1.0" }
-cw20 = { version = "0.13.2" }
-cw-storage-plus = { version = "0.13.2", features = ["iterator"] }
+cosmwasm-std = { version = "1.1" }
+cw20 = {version = "0.15"}
+cw-storage-plus = { version = "0.15", features = ["iterator"] }
 schemars = "0.8.1"
 astroport = { path = "../../packages/astroport", default-features = false }
 spectrum = { version = "1.0.0", path = "../../packages/spectrum" }
 serde = { version = "1.0.137", default-features = false, features = ["derive"] }
 thiserror = { version = "1.0.31" }
+cosmwasm-schema = "1.1"
 
 [dev-dependencies]
-cosmwasm-schema = { version = "1.0.0" }
-cw-multi-test = "0.13.2"
+cw-multi-test = {version = "0.15"}
