--- a/contracts/generator_proxy/Cargo.toml
+++ b/contracts/generator_proxy/Cargo.toml
@@ -25,12 +25,10 @@ backtraces = ["cosmwasm-std/backtraces"]
 astroport = { path = "../../packages/astroport", default-features = false }
 astroport-governance = { path = "../../packages/astroport-governance", default-features = false }
 spectrum = { version = "1.0.0", path = "../../packages/spectrum" }
-cw20 = { version = "0.13.2" }
-cosmwasm-std = "1.0"
-cw-storage-plus = {version = "0.13.2"}
+cw20 = {version = "0.15"}
+cosmwasm-std = { version = "1.1" }
+cw-storage-plus = {version = "0.15"}
 schemars = "0.8.1"
 serde = { version = "1.0.137", default-features = false, features = ["derive"] }
 thiserror = { version = "1.0.31" }
-
-[dev-dependencies]
-cosmwasm-schema = "1.0.0"
+cosmwasm-schema = "1.1"
