--- a/contracts/lp_staking/Cargo.toml
+++ b/contracts/lp_staking/Cargo.toml
@@ -33,13 +33,11 @@ overflow-checks = true
 backtraces = ["cosmwasm-std/backtraces"]
 
 [dependencies]
-cw20 = "0.13.2"
-cosmwasm-std = "1.0"
-cw-storage-plus = "0.13.2"
+cw20 = {version = "0.15"}
+cosmwasm-std = { version = "1.1" }
+cw-storage-plus = {version = "0.15"}
 spectrum = { version = "1.0.0", path = "../../packages/spectrum" }
 schemars = "0.8.1"
 serde = { version = "1.0.137", default-features = false, features = ["derive"] }
 thiserror = { version = "1.0.31" }
-
-[dev-dependencies]
-cosmwasm-schema = "1.0.0"
+cosmwasm-schema = "1.1"
