--- a/packages/astroport/Cargo.toml
+++ b/packages/astroport/Cargo.toml
@@ -1,9 +1,9 @@
 [package]
 name = "astroport"
-version = "1.2.0"
+version = "2.3.0"
 authors = ["Astroport"]
 edition = "2021"
-description = "Common astroport types"
+description = "Common Astroport types, queriers and other utils"
 license = "Apache-2.0"
 repository = "https://github.com/astroport-fi/astroport"
 homepage = "https://astroport.fi"
@@ -16,13 +16,11 @@ homepage = "https://astroport.fi"
 backtraces = ["cosmwasm-std/backtraces"]
 
 [dependencies]
-cw20 = { version = "0.13.2" }
-cosmwasm-std = { version = "1.0.0" }
-schemars = "0.8.1"
-serde = { version = "1.0.137", default-features = false, features = ["derive"] }
-uint = "0.9.1"
-cw-storage-plus = { version = "0.13.2" }
+cw20 = { version = "0.15" }
+cosmwasm-std = { version = "1.1" }
+uint = "0.9"
+cw-storage-plus = "0.15"
 itertools = "0.10"
-
-[dev-dependencies]
-cosmwasm-schema = "1.0.0"
+cosmwasm-schema = "1.1"
+cw-utils = "0.15"
+ap-native-coin-registry = { path = "../../packages/native_coin_registry" }
