--- a/contracts/fees_collector/schema/config.json
+++ b/contracts/fees_collector/schema/config.json
@@ -4,21 +4,13 @@
   "description": "This structure stores the main parameter for the fees collector contract.",
   "type": "object",
   "required": [
-    "factory_contract",
     "operator",
     "owner",
+    "router",
     "stablecoin",
     "target_list"
   ],
   "properties": {
-    "factory_contract": {
-      "description": "The factory contract address",
-      "allOf": [
-        {
-          "$ref": "#/definitions/Addr"
-        }
-      ]
-    },
     "operator": {
       "description": "Address that's allowed to update bridge asset",
       "allOf": [
@@ -35,11 +27,19 @@
         }
       ]
     },
+    "router": {
+      "description": "The factory contract address",
+      "allOf": [
+        {
+          "$ref": "#/definitions/Router"
+        }
+      ]
+    },
     "stablecoin": {
       "description": "The stablecoin token address",
       "allOf": [
         {
-          "$ref": "#/definitions/AssetInfo"
+          "$ref": "#/definitions/Denom"
         }
       ]
     },
@@ -68,52 +68,11 @@
       "description": "A human readable address.\n\nIn Cosmos, this is typically bech32 encoded. But for multi-chain smart contracts no assumptions should be made other than being UTF-8 encoded and of reasonable length.\n\nThis type represents a validated address. It can be created in the following ways 1. Use `Addr::unchecked(input)` 2. Use `let checked: Addr = deps.api.addr_validate(input)?` 3. Use `let checked: Addr = deps.api.addr_humanize(canonical_addr)?` 4. Deserialize from JSON. This must only be done from JSON that was validated before such as a contract's state. `Addr` must not be used in messages sent by the user because this would result in unvalidated instances.\n\nThis type is immutable. If you really need to mutate it (Really? Are you sure?), create a mutable copy using `let mut mutable = Addr::to_string()` and operate on that `String` instance.",
       "type": "string"
     },
-    "AssetInfo": {
-      "description": "This enum describes available Token types. ## Examples ``` # use cosmwasm_std::Addr; # use astroport::asset::AssetInfo::{NativeToken, Token}; Token { contract_addr: Addr::unchecked(\"terra...\") }; NativeToken { denom: String::from(\"uluna\") }; ```",
-      "oneOf": [
-        {
-          "description": "Non-native Token",
-          "type": "object",
-          "required": [
-            "token"
-          ],
-          "properties": {
-            "token": {
-              "type": "object",
-              "required": [
-                "contract_addr"
-              ],
-              "properties": {
-                "contract_addr": {
-                  "$ref": "#/definitions/Addr"
-                }
-              }
-            }
-          },
-          "additionalProperties": false
-        },
-        {
-          "description": "Native token",
-          "type": "object",
-          "required": [
-            "native_token"
-          ],
-          "properties": {
-            "native_token": {
-              "type": "object",
-              "required": [
-                "denom"
-              ],
-              "properties": {
-                "denom": {
-                  "type": "string"
-                }
-              }
-            }
-          },
-          "additionalProperties": false
-        }
-      ]
+    "Denom": {
+      "type": "string"
+    },
+    "Router": {
+      "$ref": "#/definitions/Addr"
     }
   }
 }
