--- a/packages/astroport/Cargo.toml
+++ b/packages/astroport/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "astroport"
-version = "2.3.0"
+version = "3.3.2"
 authors = ["Astroport"]
 edition = "2021"
 description = "Common Astroport types, queriers and other utils"
@@ -14,6 +14,7 @@ homepage = "https://astroport.fi"
 # for quicker tests, cargo test --lib
 # for more explicit tests, cargo test --features=backtraces
 backtraces = ["cosmwasm-std/backtraces"]
+injective = ["injective-math", "thiserror"]
 
 [dependencies]
 cw20 = { version = "0.15" }
@@ -22,5 +23,10 @@ uint = "0.9"
 cw-storage-plus = "0.15"
 itertools = "0.10"
 cosmwasm-schema = "1.1"
-cw-utils = "0.15"
-ap-native-coin-registry = { path = "../../packages/native_coin_registry" }
+astroport-circular-buffer = { path = "../circular_buffer" }
+cw-utils = "1.0"
+cw3 = "1.0"
+
+# optional
+injective-math = { version = "0.1", optional = true }
+thiserror = { version="1.0", optional = true }
